--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,7 +10,7 @@ BBFILE_PATTERN_imx8mmevkimxextra = "^${LAYERDIR}/"
 BBFILE_PRIORITY_imx8mmevkimxextra = "5"
 
 LAYERDEPENDS_imx8mmevkimxextra = "core imx8mmevkbsp"
-LAYERSERIES_COMPAT_imx8mmevkimxextra = "dunfell"
+LAYERSERIES_COMPAT_imx8mmevkimxextra = "dunfell kirkstone"
 
 BBFILES_DYNAMIC += " \
 	core:${LAYERDIR}/dynamic-layers/core/*/*/*.bb \
