distro: imx8mmevklinux: Inherit image-buildinfo
Inherit image-buildinfo so that the system build information
can be stored in the /etc/build.

Signed-off-by: Fabio Estevam <festevam@denx.de>

--- a/conf/distro/imx8mmevklinux.conf
+++ b/conf/distro/imx8mmevklinux.conf
@@ -72,6 +72,8 @@ WARN_TO_ERROR_QA = "already-stripped compile-host-path install-host-path \
 WARN_QA:remove = "${WARN_TO_ERROR_QA}"
 ERROR_QA:append = " ${WARN_TO_ERROR_QA}"
 
+INHERIT += "image-buildinfo"
+
 require conf/distro/include/no-static-libs.inc
 require conf/distro/include/yocto-uninative.inc
 INHERIT += "uninative"
