--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -12,6 +12,8 @@ BBFILE_PRIORITY_imx8mmevkimxextra = "5"
 LAYERDEPENDS_imx8mmevkimxextra = "core imx8mmevkbsp"
 LAYERSERIES_COMPAT_imx8mmevkimxextra = "dunfell kirkstone"
 
+KEYSTORAGE = "${LAYERDIR}"
+
 BBFILES_DYNAMIC += " \
 	core:${LAYERDIR}/dynamic-layers/core/*/*/*.bb \
 	core:${LAYERDIR}/dynamic-layers/core/*/*/*.bbappend \
